--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile group: 'javax.validation' , name: 'validation-api' , version: '2.0.1.Final'
+    compile group: 'org.hibernate' , name: 'hibernate-validator', version: '6.0.10.Final'
 }
 
 test {
